--- a/src/components/learningModule/Styles.scss
+++ b/src/components/learningModule/Styles.scss
@@ -1,48 +1,60 @@
-@import '../../styles/utils/colors';
-@import '../../styles/utils/mixins';
-@import '../../styles/utils/breakpoints';
+@import "../../styles/utils/colors";
+@import "../../styles/utils/mixins";
+@import "../../styles/utils/breakpoints";
 
 .learningModule {
-    &--header {
-        text-align: center;
-    }
+	&--header {
+		@media only screen and (min-width: $mobile) {
+			text-align: center;
+		}
+	}
 
-    &--title {
-        margin: 25px 10px;
-        color: $morning-sky;
-        font-weight: 600;
-        font-size: 1.5em;
-    }
+	&--title {
+		margin: 25px 10px;
+		color: $morning-sky;
+		font-weight: 600;
+		font-size: 1.5em;
+	}
 
-    &--subHeader{
-        @include subheader;
-        min-height: 42px;
-    }
-  
-    &--answerArea {
-        background-color: white;
-        box-shadow: 0px 0px 20px -15px;
-        padding: 0px 0px 20px 0;
-        border-radius: 10px;
-        display: grid;
-        justify-content: center;
-        @media only screen and (max-width: $tablet) {
-            border-radius: unset;
-        }
+	&--subHeader {
+		@include subheader;
+		min-height: 42px;
+		@media only screen and (max-width: $mobile) {
+			display: none;
+		}
+	}
 
-    }
+	&--answerArea {
+		@media only screen and (min-width: $mobile) {
+			background-color: white;
+			box-shadow: 0px 0px 20px -15px;
+		}
+		padding: 0px 0px 20px 0;
+		border-radius: 10px;
+		display: grid;
+		justify-content: center;
+		@media only screen and (max-width: $tablet) {
+			border-radius: unset;
+		}
+	}
 
-    &--selections{ 
-        padding: 30px 0;
-        display: grid;
-        grid-auto-flow: column;
-        grid-gap: 10px;
-    }
+	&--selections {
+		padding: 30px 0;
+		display: grid;
+		grid-auto-flow: column;
+		grid-gap: 10px;
+		@media only screen and (max-width: $tablet) {
+			grid-template-columns: auto auto;
+			grid-template-rows: auto auto;
+		}
+	}
 
-    &--submitButtonContainer {
-        height: 50px;
-        .submitButton {
-            float: right;
-        }
-    }
+	&--submitButtonContainer {
+		height: 50px;
+		.submitButton {
+			@media only screen and (min-width: $mobile) {
+				float: right;
+			}
+		}
+	}
 }
