--- a/src/components/navbar/Styles.scss
+++ b/src/components/navbar/Styles.scss
@@ -1,24 +1,28 @@
-#navbarContainer{
-  height: 50px;
-  background: black;
+@import "../../styles/utils/breakpoints";
+
+#navbarContainer {
+	height: 50px;
+	background: black;
 }
 
-#navbarContent{
-  max-width: 800px;
-  margin: 0 auto;
+#navbarContent {
+	max-width: 800px;
+	margin: 0 auto;
+	@media only screen and (max-width: $mobile) {
+		text-align: center;
+	}
 }
 
 @media (max-width: 500px) {
-  #navbarContainer{
-    margin-bottom: 15px;
-  }
+	#navbarContainer {
+		margin-bottom: 15px;
+	}
 }
 
-#navbarContainer{
-
-  img{
-    height: 30px;
-    line-height: 40px;
-    padding: 10px 15px;
-  }
+#navbarContainer {
+	img {
+		height: 30px;
+		line-height: 40px;
+		padding: 10px 15px;
+	}
 }
